@@ -462,15 +462,6 @@ export DEBIAN_BUILDGCCVER=3.2
   <chapter id="pbuilder-uml">
     <title>Using User-mode-linux with pbuilder</title>
     <para>
-      NOTE that since October 2004, <command>pbuilder</command> for
-      user-mode-linux is not distributed, since
-      <command>user-mode-linux</command> itself is broken in Debian.
-      A functional <command>user-mode-linux</command> will hopefully
-      be fixed before Debian etch release, but it is not quite
-      determined yet if <command>pbuilder-user-mode-linux</command>
-      will be ready for etch.
-    </para>
-    <para>
       It is possible to use user-mode-linux by invoking
       <command>pbuilder-user-mode-linux</command> instead of
       <command>pbuilder</command>.
