@@ -1,9 +1,12 @@
 pbuilder (0.160) UNRELEASED; urgency=low
 
-  * Bug fix: "pbuilder-doc.html: cowbuilder instead of cowdancer", thanks
+  * Bug fix: "pbuilder-doc: cowbuilder instead of cowdancer", thanks
     to Joachim Breitner (Closes: #394673).
+  * Bug fix: "pbuilder-doc: inaccurcies in `Chapter 3. Using
+    User-mode-linux with pbuilder'?", thanks to shaulka@012.net.il
+    (Closes: #394857).
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 23 Oct 2006 23:12:28 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Tue, 24 Oct 2006 07:49:23 +0900
 
 pbuilder (0.159) unstable; urgency=low
 
