@@ -1,3 +1,8 @@
+2006-10-24  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: remove the note saying that
+	pbuilder-user-mode-linux is not available.
+
 2006-10-23  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: s/cowdancer/cowbuilder/
